update tour cards to no longer have a front/back side on smaller screens - have back side content appear below the card as an extension to the card

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -202,4 +202,43 @@
     font-size: 6rem;
     font-weight: 100;
   }
+
+  @include respond(tab-port) {
+    // there is no longer a front/back side
+    height: auto;
+
+    &__side {
+      height: auto;
+      // no longer have 2 sides that occupy the same space - now will have front and then back side
+      position: relative;
+      border-radius: 3px;
+
+      &--back {
+        transform: rotateY(0);
+      }
+    }
+
+    // want the card to flip when hovered
+    // when you hover the CARD, you want the SIDE to transform
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    // BACK SIDE STYLING
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      width: 100%;
+    }
+
+    &__price-box {
+      margin-bottom: 8rem;
+    }
+
+    &__price-value {
+      font-size: 6rem;
+    }
+  }
 }
